# AgentXploit

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.api  Dockerfile.docs  Dockerfile.kali-mcp  Dockerfile.pentestai  Dockerfile.ui  README.md  api_server.py  docker-compose.yml  example_kali_mcp.py  pentestai_interactive.py  pentestai_ui.py  pyproject.toml  quickstart.py  requirements.txt  test_pentestai.py  verify_penheal.py
docs/: DOCUMENTATION_INDEX.md  README.md  _coverpage.md  _navbar.md  _sidebar.md  architecture.md  getting-started.md  index.html  installation.md  troubleshooting.md
docs/api/: python-api.md  rest-api.md
docs/core/: configuration.md
docs/deployment/: docker-services.md  docker.md
docs/examples/: full-assessment.md
pentestai/: __init__.py  cli.py  examples.py  interactive_cli.py
pentestai/core/: __init__.py  config.py  controller.py  pentest_module.py  remediation_module.py
pentestai/knowledge/: __init__.py  base.py
pentestai/llm/: __init__.py  client.py
pentestai/mcp/: __init__.py  client.py
pentestai/models/: __init__.py  data.py
pentestai_results/: attack_plan_20260206_005154.json  attack_plan_20260206_005221.json  pentest_results_20260206_094356.json  pentestai_report_20260206_005154.txt  pentestai_report_20260206_005202.txt  pentestai_report_20260206_005221.txt  pentestai_results_20260206_005154.json  pentestai_results_20260206_005202.json  pentestai_results_20260206_005221.json  remediation_results_20260206_094409.json
tests/: test_penheal.py
ui/: .dockerignore  Dockerfile  index.html  package.json  vite.config.js
ui/src/: App.css  App.css.old  App.jsx  App.jsx.old  index.css
