[project]
name = "pentestai"
version = "1.0.0"
description = "Unified AI-powered penetration testing and remediation framework combining PentestGPT and PenHeal"
authors = [{ name = "PentestAI Team" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9,<4.0"
keywords = [
    "penetration-testing",
    "security",
    "ai",
    "openai",
    "gpt-4",
    "pentest",
    "cybersecurity",
    "remediation",
    "automation",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Topic :: Security",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "pydantic>=2.5.0",
    "python-dotenv>=1.0.0",
    "openai>=1.0.0",
]

[project.scripts]
pentestai = "pentestai.cli:main"
pentestai-interactive = "pentestai.interactive_cli:main"

[project.urls]
Homepage = "https://github.com/pentestai/pentestai"
Repository = "https://github.com/pentestai/pentestai"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pentestgpt"]

# ============================================================================
# uv Configuration
# ============================================================================

[tool.uv]
dev-dependencies = [
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
]

# ============================================================================
# Ruff Configuration (Linter & Formatter)
# ============================================================================

[tool.ruff]
target-version = "py312"
line-length = 100
extend-exclude = [
    ".git",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    "__pycache__",
    "build",
    "dist",
    "legacy",
    "PentestGPTClaude",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "RUF", # Ruff-specific rules
]

ignore = [
    "E501",   # Line too long (handled by formatter)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ============================================================================
# MyPy Configuration (Type Checking)
# ============================================================================

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "claude_agent_sdk.*",
    "textual.*",
]
ignore_missing_imports = true

# ============================================================================
# Pytest Configuration
# ============================================================================

[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "--strict-markers",
    "--strict-config",
]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
markers = [
    "unit: Unit tests (fast, no external dependencies)",
    "integration: Integration tests (may use mocks)",
    "docker: Docker tests (requires Docker daemon)",
    "slow: Slow tests (skip with -m 'not slow')",
]
